--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-exit-app": "^1.1.0",
     "react-native-modal": "^13.0.1",
     "react-native-numeric-input": "^1.9.1",
     "react-native-safe-area-context": "^4.2.4",
